# InteractiveGeneticAudioGenerator

./: .gitignore  README  README.md  performance.sh  serverconfig.scd  start.sh
SuperCollider/: moogbass.scd  prophet5pwmstrings.scd  serverconfig.scd  test.scd
SuperCollider/fx/: bandpass.scd  delay.scd  paulstretch.scd
audio/: serverconfig.scd
avr/: CMakeLists.txt
avr/inc/: VirtualSerial.h
avr/inc/LUFA/: Descriptors.h  Device.h  Endpoint.h  USBController.h
avr/src/: Descriptors.c  VirtualSerial.c
avr/src/LUFA/: Descriptors.c  EndpointStream_AVR8.c
fx/: cutoff.scd  reverb.scd  volume.scd
gene/: config.yaml
gene/inc/: audience.hpp  genetics.hpp  individual.hpp  instruction.hpp  math.hpp  midi.hpp  musician.hpp  osc.hpp  performance.hpp  population.hpp  preference.hpp  spi.hpp
gene/inc/math/: math.hpp
gene/src/: CMakeLists.txt  genetics.cpp  individual.cpp  instruction.cpp  main.cpp  midi.cpp  osc.cpp  performance.cpp  population.cpp  spi.cpp
gene/src/algorithms/: CMakeLists.txt
gene/src/math/: math.cpp
rpi/: CMakeLists.txt  CPPLINT.cfg  foo.yaml  start.sh
rpi/SuperCollider/: kick808.scd  moogbass.scd  serverconfig.scd
rpi/SuperCollider/fx/: cutoff.scd  limiter.scd  (+2 more)
rpi/inc/: attribute.hpp  audience.hpp  conductor.hpp  gene.hpp  genetics.hpp  genome.hpp  individual.hpp  instruction.hpp  instructions.hpp  midi.hpp  musician.hpp  osc.hpp  population.hpp  preference.hpp  preferences.hpp  spi.hpp
rpi/src/: CMakeLists.txt  attribute.cpp  gene.cpp  genetics.cpp  genome.cpp  individual.cpp  instruction.cpp  main.cpp  midi.cpp  osc.cpp  population.cpp  spi.cpp
synths/: ambientpad.scd  apad_mh.scd  bassogettato.scd  bassything.scd  flute.scd  groan.scd  ideas  kick808.scd  sine.scd  squeekypad.scd  synthbass.scd  thunderstorm.scd
(+16 files in other folders)
