add_executable(audiogen main.cpp population.cpp genome.cpp gene.cpp)
set(CMAKE_CXX_STANDARD 14)
target_compile_options(audiogen PUBLIC -Wall -Wextra -Wpedantic -Werror)
find_package(gflags REQUIRED)
find_package(yaml-cpp REQUIRED)
target_include_directories(audiogen PRIVATE ../inc)
include_directories(../inc)
target_link_libraries(audiogen gflags yaml-cpp)
install(TARGETS audiogen DESTINATION bin)
