set(CMAKE_CXX_STANDARD 14)
add_executable(audiogen osc.cpp attribute.cpp individual.cpp population.cpp main.cpp)
target_compile_options(audiogen PUBLIC -Wall -Wextra -Wpedantic -Werror -Wno-psabi)
find_package(gflags REQUIRED)
find_package(yaml-cpp REQUIRED)
find_library(lo REQUIRED)  #OSC
find_package(spdlog REQUIRED)
find_library(wiringPi REQUIRED)
find_library(pthread REQUIRED)
target_include_directories(audiogen PRIVATE ../inc)
include_directories(../inc)
target_link_libraries(audiogen gflags yaml-cpp lo wiringPi pthread)
install(TARGETS audiogen DESTINATION bin)
